...
        disableButtons(false)
    }
    
    internal  func show(quiz result: QuizResultsViewModel) {
        let message = presenter.makeResultMessage()
        
        let alertId = "GameResult"
        let alertModel = AlertModel(title: result.title,
                                    message: message,
                                    buttonText: result.buttonText,
                                    id: alertId)
        { [weak self] in
            guard let self = self else { return }
...
